--- a/version Javascript/assets/css/style.css
+++ b/version Javascript/assets/css/style.css
@@ -1,3 +1,32 @@
+@media all and (max-width: 970px) {
+svg {
+	display: none;
+}
+#enTete h1 {
+	visibility: visible;
+	text-align: center;
+	color: rgb(178, 36, 48);
+	width: 125%;
+	font-family: "alpha_echoregular", sans-serif;
+	margin-bottom: 285px;
+	text-shadow: 6px 6px 1px black, -1px -1px 1px white;
+}
+}
+
+
+
+@font-face {
+    font-family: 'alpha_echoregular';
+    src: url('../font/alpha_echo-webfont.eot');
+    src: url('../font/alpha_echo-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../font/alpha_echo-webfont.woff2') format('woff2'),
+         url('../font/alpha_echo-webfont.woff') format('woff'),
+         url('../font/alpha_echo-webfont.ttf') format('truetype'),
+         url('../font/alpha_echo-webfont.svg#alpha_echoregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 /*====== Le cadre ===*/
 
@@ -5,6 +34,7 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: #696969;
 }
 
 .conteneur {
@@ -15,29 +45,36 @@ body {
 	align-items: center;
 }
 
-
-
-
 /*=====  1er bloc  =====*/
 
 #enTete { display: flex;
 	flex-flow: column;
 	align-items: center;
-
+	width: 1000px;
 }
 
-#enTete h1 {
-	text-align: center;
-	color: rgb(178, 36, 48);
-	width: 50%;
+h1 {
+	visibility: hidden;
+}
+
+path {
+  fill: transparent;
+}
+
+text {
+  fill: rgb(178, 36, 48);
+	stroke: black;
+	font-family: "alpha_echoregular", sans-serif;
+	font-size: 31px;
 }
 
 img {
-	height : 200px;
-	width: 200px;
+	height : 230px;
+	width: 230px;
+	padding-top: 0px;
+	margin-top: -250px;
+	margin-bottom: 35px;
 }
-
-
 
 
 /*======  2e bloc  =====*/
@@ -49,7 +86,12 @@ form {
 	justify-content: space-around;
 }
 
-
+#choix_options {
+	background-color: black;
+	color: white;
+	width: 175px;
+	height: 50px;
+}
 
 
 /*======  3e bloc  =====*/
